# SSN3_SIDROOT

./: .gitignore  1goes_events_py3.ipynb  1goes_events_py3.qmd  2goesSumm.py  2goes_sid_analysis_v1_1.ipynb  2goes_sid_analysis_v1_1.qmd  3reporter_main_v1_4.ipynb  3reporter_main_v1_4.qmd  SIDAnalControl.ini  SIDAnalObservers.ini  SIDAnalStations.ini  VLF_list.docx  main.py  pyproject.toml
Src/: 1goesevents.py  2goesSumm.py3  3reporter_main.py  3reporter_main.py3  goes_events.py3
