[project]
name = "ssn3-sidroot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
