[project]
name = "ssn3-sidroot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.0",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
